--- a/summary.html
+++ b/summary.html
@@ -20,6 +20,20 @@
         <p class="sec1-p">
             You can now listen to millions of songs, audiobooks and podcasts on any device anywhere you like!
         </p>
+        <div class="flex-container">
+            <div class="container-r">
+                <h4 class="container-h4">Annual Plan</h4>
+            </div>
+            <div class="container-l">
+                <a href="#">Change</a>
+            </div>
+        </div>
+        <footer class="footer">
+            <button class="btn-1">Proceed to Paymen</button>
+        </footer>
+        <button class="btn-2">
+            Cancel Order
+        </button>
     </section>
 </body>
 </html>
