--- a/summary.html
+++ b/summary.html
@@ -9,11 +9,10 @@
     <title>Order Summary</title>
 </head>
 <body>
+    <section class="section1">
     <header class="header">
         <img src="/imagenes/illustration-hero.svg" alt="" class="header-img">
     </header>
-    <!-- SECTION 1 -->
-    <section class="section1">
         <h1 class="sec1-h1">
             Order Summary
         </h1>
@@ -23,6 +22,7 @@
         <div class="flex-container">
             <div class="container-r">
                 <h4 class="container-h4">Annual Plan</h4>
+                <span class="span-r">$59.99/year</span>
             </div>
             <div class="container-l">
                 <a href="#">Change</a>
