--- a/summary.html
+++ b/summary.html
@@ -21,8 +21,11 @@
         </p>
         <div class="flex-container">
             <div class="container-r">
-                <h4 class="container-h4">Annual Plan</h4>
-                <span class="span-r">$59.99/year</span>
+                <img src="/imagenes/icon-music.svg" alt="" class="icon">
+                <div class="block">
+                    <h4 class="container-h4">Annual Plan</h4>
+                    <span class="span-r">$59.99/year</span>
+                </div>
             </div>
             <div class="container-l">
                 <a href="#">Change</a>
